@@ -184,6 +184,12 @@ $(function() {
 			equals($('.blankShouldBeBlank').html(), '', "blank should return blank"); 
 		});
 		
+		testFormat('.floatToCommaDecimal', { decimalSymbol: ',', digitGroupSymbol: '.', dropDecimals: false, groupDigits: true, symbol: '' }, function() {		
+			equals($('.floatToCommaDecimal').html(), '33.195,50', "formatting a float value should succeed"); 
+		});
+		
+		
+		
 	});
 	
 	test("can format US currency", function() {
